<resources>
    <string name="app_name">Finca</string>
    <string name="action_pay">PAY</string>
    <string name="terminal_configuration">Terminal Configuration</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enable_usb">Enable Usb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="powered_by_astrapay">Powered by AstraPay</string>
    <string name="astra_website">www.astrapay.com.ng</string>
    <string name="make_withdrawal">Make Withdrawal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter PIN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_phonenumber">Enter PhoneNumber</string>
    <string name="prompt_login">Login</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="send_money">sendmoney</string>
    <string name="send_money_from_cash">Send Money from cash</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="astra_logo">astra logo</string>
    <string name="app_version">AstraPOS Version 1.0.0-alpha</string>
    <string name="welcome_to_astra">Welcome to Astra POS terminal</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="enter_userId">Please type in your User ID</string>
    <string name="prompt_submit">Submit</string>
    <string name="profile_name">Pellumie</string>
    <string name="send_money_by_card">send money by card</string>
    <string name="send_by_card">Send Money from card</string>
    <string name="send_cash">Send Cash</string>
    <string name="bill_pay_txt">Pay Bills Dstv, Gotv ...</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="latest_transactions">Latest transactions</string>
    <string name="profile_screen_">profile Screen Tab</string>
    <string name="logged_in_name">Akinpelumi Akinlade</string>
    <string name="logged_in_email">akinlade3195@gmail.com</string>
    <string name="logged_in_phone">07037221814</string>
    <string name="logged_in_username">Layioye</string>
    <string name="welcome_back2">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_acct_no">Enter Account Number</string>
    <string name="enter_acct_name">Enter Account Name</string>
    <string name="select_bank">Select Bank</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="enter_narration">Enter Narration</string>
    <string name="withdraw_money_from_card">Withdraw Money from Card</string>
    <string name="mtn_recharge">MTN Recharge</string>
    <string name="IBDEC">Ibadan Electricity Distribution Company</string>
    <string name="choose_biller">Choose Biller</string>
    <string name="thank_you">Thank You!</string>
    <string name="choose_network_provider">Choose Network Provider</string>
    <string name="filter_icon">filter icon</string>
    <string name="initiate_transfer">Initiate Transfer</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="search_icon">search icon</string>
    <string name="search_here">Search here</string>
    <string name="dstv_subscription">DsTv subscription</string>
</resources>
