<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        tools:context=".views.fragments.SendCashLandingFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <!--        amount entry-->
            <LinearLayout
                android:id="@+id/amountLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/amountLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/nimbus_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Amount"
                    android:textColor="@color/txtColor"
                    android:textSize="15sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountEntry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectangle_grey_border"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:fontFamily="@font/nimbus_regular"
                    android:paddingLeft="15dp"
                    android:selectAllOnFocus="true"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


            <!--        account number entry-->
            <LinearLayout
                android:id="@+id/acctNoLayout"
                android:layout_below="@+id/amountLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_number"
                    android:padding="10dp"
                    android:textColor="@color/iswTextColorBlack"
                    android:fontFamily="@font/nimbus_regular"
                    android:textSize="15sp">
                </TextView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acctNumEntry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectangle_grey_border"
                    android:hint="@string/enter_acct_no"
                    android:inputType="number"
                    android:fontFamily="@font/nimbus_regular"
                    android:paddingLeft="15dp"
                    android:selectAllOnFocus="true"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:maxLength="10"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>

            <!--        bank picker entry-->
            <LinearLayout
                android:id="@+id/bankLayout"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/acctNoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/isw_transfer_input_bank_code_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Bank"
                    android:textColor="@color/iswTextColorBlack"
                    android:fontFamily="@font/nimbus_regular"
                    android:textSize="15sp">
                </TextView>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bankNameEntry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectangle_grey_border"
                    android:hint="@string/select_bank"
                    android:inputType="number"
                    android:drawableEnd="@drawable/ic_down"
                    android:fontFamily="@font/nimbus_regular"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:selectAllOnFocus="true"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:maxLength="10"
                    android:paddingEnd="15dp"
                    android:drawableRight="@drawable/ic_down" />
            </LinearLayout>


            <!--        account name entry-->
            <LinearLayout
                android:id="@+id/acctNameLayout"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/bankLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/account_name"
                    android:visibility="visible"
                    android:textColor="@color/iswTextColorBlack"
                    android:fontFamily="@font/roboto_black"
                    android:textSize="15sp">
                </TextView>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acctNameEntry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectangle_grey_border"
                    android:hint="@string/enter_acct_name"
                    android:inputType="text"
                    android:fontFamily="@font/nimbus_regular"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:focusable="false"
                    android:textIsSelectable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <!--        narration entry-->
            <LinearLayout
                android:id="@+id/naraLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acctNameLayout"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/naraLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/nimbus_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Narration"
                    android:textColor="@color/txtColor"
                    android:textSize="15sp"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/narrationEntry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rectangle_grey_border"
                    android:hint="@string/enter_narration"
                    android:inputType="text"
                    android:fontFamily="@font/nimbus_regular"
                    android:paddingLeft="15dp"
                    android:selectAllOnFocus="true"
                    android:paddingStart="15dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <Button
                android:id="@+id/initiateBtn"
                android:layout_below="@+id/naraLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:background="@drawable/button_states"
                android:enabled="true"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:text="@string/initiate_transfer"/>

        </RelativeLayout>
    </ScrollView>
</layout>