<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.sendmoneyflow.SendMoneyCardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!--        amount entry-->
        <LinearLayout
            android:id="@+id/amountLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amountLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/nimbus_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="Amount"
                android:textColor="@color/txtColor"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEntry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rectangle_grey_border"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:fontFamily="@font/nimbus_regular"
                android:paddingLeft="15dp"
                android:selectAllOnFocus="true"
                android:paddingStart="15dp"
                android:focusable="false"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


        <!--        account number entry-->
        <LinearLayout
            android:id="@+id/acctNoLayout"
            android:layout_below="@+id/amountLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textColor="@color/iswTextColorBlack"
                android:fontFamily="@font/nimbus_regular"
                android:textSize="20sp">
            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAmount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_grey_border">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isw_transfer_input_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_acct_no"
                    android:fontFamily="@font/nimbus_regular"
                    android:gravity="center_vertical"
                    android:maxLength="10"
                    android:ems="10"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--        bank picker entry-->
        <LinearLayout
            android:id="@+id/bankLayout"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/acctNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/isw_transfer_input_bank_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Bank"
                android:textColor="@color/iswTextColorBlack"
                android:fontFamily="@font/nimbus_regular"
                android:textSize="20sp">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:background="@drawable/rectangle_grey_border">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isw_transfer_input_bank"
                    app:endIconDrawable="@drawable/isw_ic_download"
                    android:gravity="center_vertical"
                    android:hint="@string/select_bank"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!--        account name entry-->
        <LinearLayout
            android:id="@+id/acctNameLayout"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/bankLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/account_name"
                android:visibility="visible"
                android:textColor="@color/iswTextColorBlack"
                android:fontFamily="@font/roboto_black"
                android:textSize="20sp">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedNameTextField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:visibility="visible"
                android:background="@drawable/rectangle_grey_border">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isw_transfer_input_account_name"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--        narration entry-->
        <LinearLayout
            android:id="@+id/naraLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acctNameLayout"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/naraLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/nimbus_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="Narration"
                android:textColor="@color/txtColor"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/naraEntry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rectangle_grey_border"
                android:hint="@string/enter_narration"
                android:inputType="text"
                android:fontFamily="@font/nimbus_regular"
                android:paddingLeft="15dp"
                android:selectAllOnFocus="true"
                android:paddingStart="15dp"
                android:focusable="false"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <Button
            android:id="@+id/continueBtn"
            android:layout_below="@+id/naraLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/button_states"
            android:enabled="true"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:text="Continue"/>

    </RelativeLayout>
</ScrollView>